<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2"
    android:gravity="center_horizontal"
    tools:context=".VerificationActivity">
    <ImageView
        android:src="@drawable/header"
        android:scaleType="centerCrop"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="250dp"/>
    <TextView
        android:text="@string/otp_verification"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#f12f61f4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/we_will_send_you_a"
            android:textColor="#656262"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:text="@string/one_time_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#656262"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:text="@string/on_this_mobile_number"
                android:textColor="#656262"
                android:textSize="16sp"
                android:textStyle="normal" />
            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="15dp"
                    android:background="#cecece"
                    android:layout_margin="15dp"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editNumber"
                    android:hint="@string/type_your_phone_number"
                    android:padding="10dp"
                    android:ems="1"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:textStyle="bold|normal"
                    android:textColor="#1c1c1c"
                    android:layout_marginBottom="15dp"
                    android:background="@color/common_google_signin_btn_text_dark"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:importantForAutofill="no" />
                <Button
                    android:id="@+id/continueBtn"
                    android:textSize="17sp"
                    android:textAllCaps="false"
                    android:backgroundTint="#F137E606"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_Continue_btn" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>



        </LinearLayout>
